2015-10-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #70999: Add configuration check utility
	* Resolves #71000: Add url utility

2015-10-23 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #70981: [!!!] Move default style sheets to Resources directory and add static template
	* Resolves #70984: Move example text files to Resources directory
	* Resolves #70986: Move template to Resources directory

2015-10-22 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #67629: RSA authentication didn't work from TYPO3 6.2.4
	* Update version to 4.0.0
	* Resolves #59450: Missing SQL definition for telephone

2015-10-21 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #70920: [!!!] Use Extbase localization
	* Resolves #70925: Namespace plugin controller
	* Follow-up to Resolves #70920: [!!!] Use Extbase localization

2015-10-18 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #70822: [!!!] Restructure captcha hooks

2015-10-14 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #70732: Move configuration files to Configuration directory
	* Resolves #62206: Array problem with 5.4+
	* Resolves #70279: Remove use of option $TYPO3_CONF_VARS['SYS']['serverTimeZone']

2015-10-13 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #70669: [!!!] Convert localization files to xliff and move them to Resources directory
	* Resolves #70671: Require TYPO3 CMS 6.2 and remove references to previous versions

2014-07-02 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #60022: Dependency issues when updating to 3.1.3

2014-06-27 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #59919: id tag not unique / no class tag for multiple select box

2014-06-25 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Adjust extension constraints
	* Remove useless error message from syslog regarding non-matching authCode
	* Update version to 3.1.3

2014-05-21 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #58964: Additional Fields not working after update on 6.2