@@ -1,6 +1,7 @@
 2015-10-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Resolves #70999: Add configuration check utility
 	* Resolves #71000: Add url utility
+	* Follow-up to Resolves #71000: Add url utility
 
 2015-10-23 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Resolves #70981: [!!!] Move default style sheets to Resources directory and add static template
